--- a/style.css
+++ b/style.css
@@ -1,15 +1,55 @@
 body{
   background-color: rgb(10, 142, 76);
+  font-family: 'Merriweather', serif;
+}
+
+#blendIn{
+background-color: rgb(10, 142, 76);
+}
+
+form{
+  margin: 3vh 0vh 5vh 0vh;
+}
+thead {
+  background-color: rgb(8, 8, 83);
+  color: white;
+}
+
+h2{
+  font-size: 1.75rem;
+}
+
+header{
+  margin-top: 2vh;
+}
+
+h1{
+  font-size: 3.5rem;
 }
 
 footer{
   height: 10vh;
   background-image: url('assets/veggies.jpg');
   background-size: contain;
+  position: relative;
+  margin-top: 5px;
 }
 .footerFix{
   height: 90vh;
 }
 td, th{
-  padding: 0px 20px;
+  padding: 2vh 20px;;
+}
+
+button{
+  background-color: inherit;
+  border-color: inherit;
+}
+
+i{
+  color: red;
+}
+
+tbody{
+  background-color: rgb(239, 241, 136)
 }
