--- a/style.css
+++ b/style.css
@@ -13,6 +13,17 @@ html, body{
 background-color: rgb(10, 142, 76);
 }
 
+#groceryItems{
+  font-family: 'Indie Flower', cursive;
+  font-size: 1.7rem;
+  font-weight: bold;
+}
+
+#add{
+background-color: rgba(8,8,83,0.7);
+color: white;
+}
+
 form{
   margin: 3% 0% 5% 0%;
 }
